--- a/pharmacy_frontend/src/AllStyles/Formlist.module.css
+++ b/pharmacy_frontend/src/AllStyles/Formlist.module.css
@@ -2,6 +2,8 @@
     padding: 1rem;
  }
 
+
+
  table {
     border-collapse:collapse;
     min-width: 100%;
@@ -12,19 +14,24 @@
     text-align: left;
     padding: 8px;
     text-align: center;
-    border-radius: 5px;
+    /* border-radius: 3px; */
     padding: 0.8rem;
+    border: none;
+
 }
 td {
     font-size: 0.8rem;
+    border-bottom: 1px solid rgb(207, 205, 205) ;
 }
 
 table th {
-     border-bottom: 1px solid rgb(190, 188, 188);
-    font-size: 0.9rem;
+     border-bottom: 1px solid rgb(228, 225, 225);
+    font-size: 0.8rem;
     font-weight: 800;
     opacity: 0.8;
-    background-color: rgb(221, 218, 218);
+    /* background-color: rgb(221, 218, 218); */
+    background-color: rgb(218, 215, 215);
+
   }
   
   tr:nth-child(even){background-color: #f2f2f2}
