--- a/pharmacy_frontend/src/AllStyles/Header.module.css
+++ b/pharmacy_frontend/src/AllStyles/Header.module.css
@@ -23,46 +23,37 @@
   
 
   
-  .topnav .searchContainer {
+   .searchContainer {
    display: flex;
    justify-content: right;
+   padding: 1rem 3rem;
+
+  }
+
+  .searchContainer:hover {
+   border-color: #46AB6A;    
   }
   
-  .topnav input[type=text] {
+   input[type=text] {
     padding: 6px;
     margin-top: 8px;
     font-size: 17px;
-    border: none;
-    padding: 0.4rem;
+    border: 1px solid rgb(143, 142, 142);
+    padding: 0.4rem ;
     outline: none;
-    border-radius: 30px;
+    border-radius: 3px;
 
   }
+
   
-  .topnav .searchContainer button {
-    text-align: right;
-    padding: 0.4rem;
-    margin-top: 8px;
-    margin-right: 16px;
-    background: #ddd;
-    font-size: 17px;
-    border: none;
-    cursor: pointer;
-    border-radius: 30px;
-
-
-  }
   
-  .topnav .searchContainer button:hover {
-    background: #ccc;
-  }
   
   @media screen and (max-width: 600px) {
     .topnav .search-container {
       float: none;
       text-align: center;
     }
-    .topnav a, .topnav input[type=text], .topnav .search-container button {
+    .topnav a, .topnav input[type=text],  .search-container button {
       float: none;
       display: block;
       text-align: center;
