--- a/pharmacy_frontend/src/AllStyles/ModalStyles.module.css
+++ b/pharmacy_frontend/src/AllStyles/ModalStyles.module.css
@@ -1,114 +1,121 @@
 body {
-    
-    /* height: 500vh; */
+  /* height: 500vh; */
+
+        /* background: linear-gradient(to right, #21549E,#107383,#46AB6A); */
+
 }
 
 .formContent {
-    margin: 2rem;
-    background-color: rgb(223, 222, 215);
-    max-width: 50%;
-    display: block;
-    /* margin: 0 auto; */
-    border-radius: 5px;
-    box-shadow: 5px auto;
-    outline: none;
-    display: block;
-    flex-direction: row;
-   
-    
+  height: 70vh;
+  width: 50%;
+  /* place-content: center; */
+  margin: 5rem auto;
+  padding: 2.5rem;
+  background-color: rgba(223, 222, 215, 0.26);
+  width: 50vw;
+  /* margin: 0 auto; */
+  border-radius: 5px;
+  box-shadow: 5px auto;
+  outline: none;
+  display: block;
+  flex-direction: row;
+  border-right-color: #46ab6a;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .price input {
-    width: 20%;
+  /* width: 20%; */
 }
 
 h2 {
-    font-weight: 500;
-    font-family: sans-serif;
+  font-weight: 500;
+  font-family: sans-serif;
 }
 
 .modalForm {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  justify-content: center;
+
 }
 
-
 .modalForm label {
-    border: 1px solid rgb(179, 179, 179);
-    border-radius: 3px;
-    padding: 0.9rem;
-    min-width:40%;
-    background-color: whitesmoke;
-
+  border-radius: 2px;
+  border: 1px solid;
+  padding: 0.9rem;
+  /* width: 60%; */
+  min-width: 50%;
+  /* background-color: whitesmoke; */
+  font-size: 16px;
 }
 
 .modalForm input {
-    min-width:30%;
-    padding: 0.5rem;
-    outline: none;
-    border: none;
-    border-radius: 3px;
-
+  /* width: 50%; */
+  min-width: 50%;
+  padding: 0.7rem;
+  outline: none;
+  border: 1px solid;
+  border-radius: 1px;
+  background-color: whitesmoke;
+  font-size: 16px;
+}
+input::placeholder {
+  padding: 0.5rem;
 }
 
-.label Input{
-    min-width: 74% !important;
-}
+/* .label Input {
+  min-width: 74% !important;
+} */
+
 
 .formgroup {
-    display: flex;
-    margin: 0.2rem;
+  display: flex;
+  margin: 0.1rem ;
+  gap: 4px;
 }
 
-.btn button{
-    display: block;
-    margin: 0.1rem;
-    background-color: #46AB6A;
-    padding: 0.8rem 1.5rem;
-    border: 1px solid rgb(224, 221, 221);
-    /* border-radius: 1px; */
-    font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    color: whitesmoke;
-    
-    
-}
-
-.graphContent {
-    display: flex;
-    min-width: 40%;
-    background-color: whitesmoke;
-    border-radius: 5px;
-    /* margin: 0 auto; */
+.btn button {
+    border-radius:5px ;
+  /* margin: 0.3rem; */
+  background-color: #46ab6a;
+  padding: 0.5rem 1.5rem;
+  border: 1px solid rgb(224, 221, 221);
+  /* border-radius: 1px; */
+  font-size: 0.8rem;
+  font-weight: bold;
+  cursor: pointer;
+  color: whitesmoke;
 }
 
 .formdetails {
   display: flex;
   gap: 35%;
-  padding: 3rem ;
-
-  
-
+  padding: 3rem;
 }
-
 
 .buttons {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  /* flex-direction: column; */
+  padding-top: 1.7rem;
+  justify-content: space-between;
 }
 
-
 .buttons .close {
-    display: block;
-    margin: 0.1rem;
-    background-color: #107383;
-    padding: 0.5rem 2rem;
-    border: 1px solid rgb(224, 221, 221);
-    /* border-radius: 1px; */
-    font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    color: whitesmoke;
+    border-radius: 5px;
+  /* margin: 0.2rem; */
+  background-color: #107383;
+  padding: 0.2rem 2rem !important;
+  border: 1px solid rgb(224, 221, 221);
+  /* border-radius: 1px; */
+  font-size: 0.8rem;
+  font-weight: bold;
+  cursor: pointer;
+  color: whitesmoke;
 }
