--- a/pharmacy_frontend/src/index.css
+++ b/pharmacy_frontend/src/index.css
@@ -67,11 +67,38 @@ button:focus-visible {
   }
 } */
 
+body {
+  /* margin: 0; */
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
 
+  /* font-family: '-apple-system', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0; */
+  /* font-family: "NotoSans",Arial,"Arial Unicode MS",sans-serif; */
+
+  /* font-family: 'avenir', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
+}
 
 body {
   margin: 0;
-  font-family: "NotoSans",Arial,"Arial Unicode MS",sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
+}
+
+code {
+  font-family:'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New',
+    monospace;
+}
+
+body {
   /* font-family: "Montserrat", sans-serif;
   font-family: "Nunito Sans", sans-serif;
   font-family: "Oswald", sans-serif;
