--- a/pharmacy_frontend/src/AllStyles/Formlist.module.css
+++ b/pharmacy_frontend/src/AllStyles/Formlist.module.css
@@ -1,5 +1,5 @@
  .formContainer {
-    padding: 1rem;
+    /* padding: 1rem; */
  }
 
 
@@ -11,14 +11,24 @@
   }
   
   th, td {
+    
     text-align: left;
     padding: 8px;
     text-align: center;
     /* border-radius: 3px; */
-    padding: 0.8rem;
+    padding: 0.7rem 2rem;
+     text-align: justify;    
     border: none;
 
 }
+
+tr td .desc {
+  width: 30%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 td {
     font-size: 0.8rem;
     border-bottom: 1px solid rgb(207, 205, 205) ;
