--- a/pharmacy_frontend/src/AllStyles/Header.module.css
+++ b/pharmacy_frontend/src/AllStyles/Header.module.css
@@ -25,8 +25,10 @@
   
    .searchContainer {
    display: flex;
-   justify-content: right;
+   justify-content: space-between;
    padding: 1rem 3rem;
+   background: linear-gradient(to right, #21549E,#107383,#46AB6A);
+
 
   }
 
@@ -34,7 +36,7 @@
    border-color: #46AB6A;    
   }
   
-   input[type=text] {
+   /* input[type=text] {
     padding: 6px;
     margin-top: 8px;
     font-size: 17px;
@@ -43,7 +45,7 @@
     outline: none;
     border-radius: 3px;
 
-  }
+  } */
 
   
   
