--- a/pharmacy_frontend/src/AllStyles/HomeStyles.css
+++ b/pharmacy_frontend/src/AllStyles/HomeStyles.css
@@ -17,6 +17,17 @@
 	height: 30vmin;
 	pointer-events: none;
   }
+
+  .card-footer {
+	display: flex;
+    text-align: center;
+    width: 100%;
+    justify-content: space-between;
+    /* margin-top: 1rem; */
+    padding: 1rem 1rem;
+    color: rgb(21, 21, 21);
+}
+  
   @media (prefers-reduced-motion: no-preference) {
 	.App-logo {
 	  animation: App-logo-spin infinite 20s linear;
@@ -44,7 +55,7 @@
 	  border-left: 1px solid rgb(190, 189, 189);
 		height: 400px;
 		position: absolute;
-	  left: 50%;
+	   left: 50%;
 		margin-left: -3px;
 		top: 100;
   }
@@ -84,17 +95,20 @@
 	  margin:0 15px 10px 0;
 	  display:inline-block;
 	  border-bottom:2px solid transparent;
+	  cursor: pointer;
   }
   .login-html .sign-in:checked + .tab,
   .login-html .sign-up:checked + .tab{
 	  color:#fff;
 	  border-color: #388087;
+	  cursor: pointer;
   }
   .login-form{
 	  min-height:345px;
 	  position:relative;
 	  perspective:1000px;
 	  transform-style:preserve-3d;
+	  cursor: pointer;
   }
   .login-form .group{
 	  margin-bottom:15px;
