--- a/pharmacy_frontend/src/AllStyles/ModalStyles.module.css
+++ b/pharmacy_frontend/src/AllStyles/ModalStyles.module.css
@@ -6,14 +6,9 @@ body {
 }
 
 .formContent {
-  height: 70vh;
-  width: 50%;
-  /* place-content: center; */
+  max-width: 50%;
   margin: 5rem auto;
-  padding: 2.5rem;
   background-color: rgba(223, 222, 215, 0.26);
-  width: 50vw;
-  /* margin: 0 auto; */
   border-radius: 5px;
   box-shadow: 5px auto;
   outline: none;
@@ -23,10 +18,10 @@ body {
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .price input {
@@ -43,12 +38,13 @@ h2 {
   flex-direction: column;
   margin: 0 auto;
   justify-content: center;
+  max-width: 600px;
 
 }
 
 .modalForm label {
   border-radius: 2px;
-  border: 1px solid;
+  border: none;
   padding: 0.9rem;
   /* width: 60%; */
   min-width: 50%;
@@ -61,10 +57,12 @@ h2 {
   min-width: 50%;
   padding: 0.7rem;
   outline: none;
-  border: 1px solid;
-  border-radius: 1px;
-  background-color: whitesmoke;
+  border: 1px solid rgb(173, 171, 171);
+  border-radius: 5px;
+  background-color: transparent;
   font-size: 16px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+
 }
 input::placeholder {
   padding: 0.5rem;
@@ -82,16 +80,18 @@ input::placeholder {
 }
 
 .btn button {
-    border-radius:5px ;
+    border-radius:30px ;
   /* margin: 0.3rem; */
   background-color: #46ab6a;
   padding: 0.5rem 1.5rem;
   border: 1px solid rgb(224, 221, 221);
   /* border-radius: 1px; */
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-weight: bold;
   cursor: pointer;
   color: whitesmoke;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+
 }
 
 .formdetails {
@@ -105,10 +105,11 @@ input::placeholder {
   /* flex-direction: column; */
   padding-top: 1.7rem;
   justify-content: space-between;
+
 }
 
 .buttons .close {
-    border-radius: 5px;
+    border-radius: 30px;
   /* margin: 0.2rem; */
   background-color: #107383;
   padding: 0.2rem 2rem !important;
@@ -118,4 +119,6 @@ input::placeholder {
   font-weight: bold;
   cursor: pointer;
   color: whitesmoke;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+
 }
