--- a/pharmacy_frontend/src/index.css
+++ b/pharmacy_frontend/src/index.css
@@ -83,6 +83,8 @@ body {
 }
 
 body {
+  overflow-x: hidden;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
@@ -138,6 +140,7 @@ ol[role='list'] {
 body {
   min-height: 100vh;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 /* Set shorter line heights on headings and interactive elements */
