--- a/pharmacy_frontend/src/AllStyles/Header.module.css
+++ b/pharmacy_frontend/src/AllStyles/Header.module.css
@@ -1,42 +1,37 @@
+/* .topnav {
+  overflow: hidden;
+  background: linear-gradient(to right, #21549e, #107383, #46ab6a);
+  padding: 0.5rem;
+}
 
-.topnav {
-    overflow: hidden;
-    background: linear-gradient(to right, #21549E,#107383,#46AB6A);
-    padding: 0.5rem;
-  }
-  
-  .topnav a {
-    float: left;
-    display: block;
-    color: whitesmoke;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    font-size: 1rem;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
+.topnav a {
+  float: left;
+  display: block;
+  color: #2449a0;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-size: 1rem;
+}
 
-  
-   .searchContainer {
-   display: flex;
-   justify-content: space-between;
-   padding: 1rem 3rem;
-   background: linear-gradient(to right, #21549E,#107383,#46AB6A);
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+} */
 
+.searchContainer {
+  display: flex;
+  /* justify-content: space-between;
+  padding: 1rem 3rem; */
+  /* background: linear-gradient(to right, #2449a0, #106883, #46ab6a); */
+}
 
-  }
+/* .searchContainer:hover {
+  border-color: #46ab6a;
+} */
 
-  .searchContainer:hover {
-   border-color: #46AB6A;    
-  }
-  
-   /* input[type=text] {
+/* input[type=text] {
     padding: 6px;
     margin-top: 8px;
     font-size: 17px;
@@ -46,24 +41,23 @@
     border-radius: 3px;
 
   } */
-
-  
-  
-  
-  @media screen and (max-width: 600px) {
-    .topnav .search-container {
-      float: none;
-      text-align: center;
-    }
-    .topnav a, .topnav input[type=text],  .search-container button {
-      float: none;
-      display: block;
-      text-align: center;
-      max-width: 100%;
-      margin: 0;
-      padding: 14px;
-    }
-    .topnav input[type=text] {
-      border: 1px solid #ccc;  
-    }
+/* 
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+    text-align: center;
   }
+  .topnav a,
+  .topnav input[type="text"],
+  .search-container button {
+    float: none;
+    display: block;
+    text-align: center;
+    max-width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type="text"] {
+    border: 1px solid #ccc;
+  }
+} */
