--- a/pharmacy_frontend/src/AllStyles/Home.module.css
+++ b/pharmacy_frontend/src/AllStyles/Home.module.css
@@ -1,119 +1,118 @@
+.homebody {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding-right: 5px;
+}
+
+.homebodyright {
+  position: absolute;
+  right: 0px;
+  width: 80%;
+}
 
 .formContent {
-    /* background-color: rgba(248, 248, 248, 0.226); */
-background-color: rgba(207, 207, 219, 0.521);   
+  /* background-color: rgba(248, 248, 248, 0.226); */
+  background-color: rgba(255, 255, 255, 0.521);
 }
 
 .pharmform {
-padding: 1rem 1rem;
- display: flex;
- flex-direction: column;
- width: 50%;
- height: 50%;
- border: none;
- background-color: transparent;
- /* background-color: red; */
- /* border: 1px solid rgb(185, 185, 185); */
- border-radius: 15px;
- /* padding: 1rem 1rem; */
- font-family: 'fantasy';
- box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
- margin-top: 1rem;
-
- }
-
-.labelInfo {
-    padding: 1rem ;
-    border: none;
-    border-radius: 3px;
-    text-align: right;
-    font-size: 1rem;
-    font-weight: bold;
-    /* margin:10; */
-    width:50%;
-    
-    /* background-color: whitesmoke; */
-
+  padding: 1rem 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 50%;
+  border: none;
+  background-color: transparent;
+  /* background-color: red; */
+  /* border: 1px solid rgb(185, 185, 185); */
+  border-radius: 15px;
+  /* padding: 1rem 1rem; */
+  font-family: "fantasy";
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+  margin-top: 1rem;
 }
 
- .inputText {
-    border: 1px solid;
-    width:50%;
-    /* padding: 2rem ; */
-    padding: 0.5rem;
-    outline: none;
-    border: none;
-    border: 1px solid rgb(196, 195, 195);
-    font-size: 17px;
-    border-radius: 8px;
-    background-color: transparent;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+.labelInfo {
+  padding: 1rem;
+  border: none;
+  border-radius: 3px;
+  text-align: right;
+  font-size: 1rem;
+  font-weight: bold;
+  /* margin:10; */
+  width: 50%;
+
+  /* background-color: whitesmoke; */
+}
+
+.inputText {
+  border: 1px solid;
+  width: 50%;
+  /* padding: 2rem ; */
+  padding: 0.5rem;
+  outline: none;
+  border: none;
+  border: 1px solid rgb(196, 195, 195);
+  font-size: 17px;
+  border-radius: 8px;
+  background-color: transparent;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
 
 .inputTextSelect {
-      border: 1px solid;
-    width:50%;
-    /* padding: 2rem ; */
-    padding: 0.5rem;
-    outline: none;
-    border: none;
-    border: 1px solid rgb(196, 195, 195);
-    font-size: 17px;
-    border-radius: 8px;
-    background-color: transparent;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+  border: 1px solid;
+  width: 50%;
+  /* padding: 2rem ; */
+  padding: 0.5rem;
+  outline: none;
+  border: none;
+  border: 1px solid rgb(196, 195, 195);
+  font-size: 17px;
+  border-radius: 8px;
+  background-color: transparent;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
 
 .inputUp {
-    border: 1px solid;
-    width:20%;
-    padding: 2rem ;
-    padding: 0.5rem;
-    outline: none;
-    border: none;
-    border: 1px solid rgb(196, 195, 195);
-    font-size: 17px;
-    border-radius: 8px;
-    background-color: transparent;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+  border: 1px solid;
+  width: 20%;
+  padding: 2rem;
+  padding: 0.5rem;
+  outline: none;
+  border: none;
+  border: 1px solid rgb(196, 195, 195);
+  font-size: 17px;
+  border-radius: 8px;
+  background-color: transparent;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
-
-
- 
-
-
 
 .formgroup {
-    gap: 0.1rem;
-    display: flex;
-    margin: 0.2rem ;
+  gap: 0.1rem;
+  display: flex;
+  margin: 0.2rem;
 }
 
-.btn button{
-    width: 50%;
-    background-color: #46AB6A;
-    padding: 0.7rem 1.9rem;
-    border: 1px solid transparent;
-    /* border-radius: 1px; */
-    font-size: 1.2rem;
-    font-weight: bold;
-    cursor: pointer;
-    color: whitesmoke;
-    border-radius: 30px;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
-    
-    
+.btn button {
+  width: 50%;
+  background-color: #46ab6a;
+  padding: 0.7rem 1.9rem;
+  border: 1px solid transparent;
+  /* border-radius: 1px; */
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+  color: whitesmoke;
+  border-radius: 30px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .btn {
-    text-align: center;
-    padding-top: 1rem;
-
+  text-align: center;
+  padding-top: 1rem;
 }
-
-
-
-
 
 /* .graphContent {
     margin-bottom: 1.5rem;
@@ -129,90 +128,164 @@ padding: 1rem 1rem;
 .formdetails {
   display: flex;
   gap: 35%;
-  padding: 2rem 2rem ;
-
-  
-
+  padding: 2rem 2rem;
 }
 
 .searchbar {
-    background-color: #fff;
-    width: 30%;
-    border-radius: 5px;
-    height: 2.5rem;
-    padding: 0 15px;
-    box-shadow: 0px 0px 8px #bbbb;
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
+  background-color: #fff;
+  width: 30%;
+  border-radius: 5px;
+  height: 2.5rem;
+  padding: 0 15px;
+  box-shadow: 0px 0px 8px #bbbb;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
 }
 
-
-
 .inputBar {
-    background-color: transparent;
-    border: none;
-    height: 50%;
-    font-size: 0.7rem;
-    width: 50%;
-    /* text-align: right; */
-    
-    
-
+  background-color: transparent;
+  border: none;
+  height: 50%;
+  font-size: 0.7rem;
+  width: 50%;
+  /* text-align: right; */
 }
 
 .inputBar:focus {
-    outline: none;
+  outline: none;
 }
 
-
 .suggestions-dropdown {
-    position: absolute;
-    top: 100%;
-    left: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  z-index: 1;
+}
+
+.suggestion-item {
+  padding: 8px;
+  cursor: pointer;
+}
+
+.suggestion-item:hover {
+  background-color: #f0f0f0;
+}
+
+@media only screen and (max-width: 375px) {
+  .formContent {
+    display: inline;
     width: 100%;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    z-index: 1;
-  }
-  
-  .suggestion-item {
-    padding: 8px;
-    cursor: pointer;
-  }
-  
-  .suggestion-item:hover {
-    background-color: #f0f0f0;
   }
 
+  .pharmform {
+    width: 100%;
+    height: 50%;
+  }
 
+  .formdetails {
+    gap: 10%;
+  }
 
+  .searchbar {
+    width: 20%; /* Adjust as needed */
+  }
 
+  #style {
+    display: none;
+  }
 
+  .graphContent {
+    display: none;
+  }
+  .ssi {
+    display: none;
+  }
+}
 
+@media only screen and (max-width: 610px) {
+  .formContent {
+    display: inline;
+    width: 100%;
+  }
 
+  .pharmform {
+    width: 100%;
+    height: 50%;
+  }
 
-@media only screen and (min-width: 600px) {
-    .formContent {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
+  .formdetails {
+    gap: 10%;
+  }
 
-    .pharmform {
-        width: 60%; 
-        height: 50%; 
-    }
+  .searchbar {
+    width: 20%; /* Adjust as needed */
+  }
 
-    .formdetails {
-        gap: 10%;
-    }
+  #style {
+    display: none;
+  }
 
-    .searchbar {
-        width: 20%; /* Adjust as needed */
-    }
+  .graphContent {
+    display: none;
+  }
+  .ssi {
+    display: none;
+  }
+}
 
-  
+@media only screen and (max-width: 768px) {
+  .formContent {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
 
-    
+  .pharmform {
+    width: 100%;
+    height: 50%;
+  }
+
+  .formdetails {
+    gap: 5%;
+  }
+
+  .searchbar {
+    width: 20%; /* Adjust as needed */
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .formContent {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .pharmform {
+    width: 100%;
+    height: 50%;
+    /* margin-left: 10%;
+    padding-right: 10%; */
+  }
+
+  .formdetails {
+    gap: 5%;
+  }
+
+  .searchbar {
+    width: 20%; /* Adjust as needed */
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
 }
