--- a/pharmacy_frontend/src/AllStyles/sidebar&navbar.css
+++ b/pharmacy_frontend/src/AllStyles/sidebar&navbar.css
@@ -1,181 +1,180 @@
 * {
-    margin: 0;
-  }
-  
-  /* TopNav.css */
-  .nav {
-    height: 50px;
-    width: 80%;
-    position: absolute;
-    right: 0;
-    background-color: #ffffff;
-  }
-  
-  .top-nav {
-    width: 100%;
-    height: 100%;
-    padding-left: 50px;
-    padding-top: 5px;
-  }
-  
-  .material-symbols-outlined {
-    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
-  }
-  
-  .icon {
-    margin: 10px;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    flex-direction: row;
-  }
-  
-  /* Sidebar.css */
-  .sidenav {
-    background-color: #ffffff;
-    width: 20%;
-    height: 100%;
-    position: fixed;
-    margin-top: 0;
-  }
-  
-  .medlogo {
-    height: 50px;
-    background-color: #2449a0;
-    margin-left: 0px;
-  }
-  
-  .medlogo img {
-    height: 50px;
-    width: 40px;
-    background-color: #1c2472;
-    
-  }
-  
-  .profile {
-    width: 100%;
-    height: 80px;
-    padding: 15px;
-  }
-  
-  .profile img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-  }
-  
-  .sidenav ul {
-    list-style: none;
-    padding: 10px;
-    padding-inline-start: 0;
-    padding-inline-end: 0;
-  }
-  
-  .sidenav li {
-    max-width: 100%;
-    padding: 15px;
-    cursor: pointer;
-  }
-  
-  .sidenav li a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    display: flex;
-    gap: 15px;
-  }
-  
-  .sidenav li:hover {
-    background-color: #e4edf9;
-    max-width: 100%;
-  }
-  
-  .outlet {
-    padding-left: 25%;
-    padding-top: 8%;
-    background-color: #e4edf9;
-  }
-  .labformArea {
-    background-color: #ffffff;
-    width: 90%;
-    /* margin-left: 3%; */
-    padding: 20px;
-    padding-top: 40px;
-    /* margin: 40px; */
-  }
-  
-  .labform {
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 55%;
-    height: fit-content;
-    margin-left: 3%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    border: #e2e5f5 solid 1px;
-  }
-  
-  .labform button {
-    background-color: #1c2472;
-    border: none;
-    height: 30px;
-    width: 80px;
-    color: #ffffff;
-  }
-  
-  .labform div {
-    display: flex;
-    flex-direction: row;
-    /* gap: 0px; */
-    width: 100%;
-  }
-  
-  .labform label {
-    width: 40%;
-    margin-left: 10px;
-  }
-  
-  .labform input,
-  select {
-    width: 100%;
-    height: 40px;
-    margin-right: 10px;
-  }
-  
-  .lablist {
-    height: 500px;
-    align-items: center;
-    width: 80%;
-    padding: 20px;
-    background-color: #ffffff;
-  }
-  
-  .labform span {
-    font-size: larger;
-    font-weight: 600;
-  }
-  .topSect {
-    display: flex;
-    flex-direction: row;
-    gap: 3%;
-  }
-  .grapharea {
-    background-color: #e4edf9;
-    height: 500px;
-    width: 35%;
-  }
-  
-  .grapharea img {
-    height: 60%;
-    width: 90%;
-    padding: 5%;
-  }
-  
-  .grapharea span {
-    max-height: 40px;
-    max-width: 40px;
-    background-color: red;
-    border: #1c2472 solid 2px;
-  }
-  
+  margin: 0;
+}
+
+/* TopNav.css */
+.nav {
+  height: 50px;
+  width: 80%;
+  position: absolute;
+  right: 0;
+  background-color: #ffffff;
+}
+
+.top-nav {
+  width: 100%;
+  height: 100%;
+  padding-left: 50px;
+  padding-top: 5px;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+
+.icon {
+  margin: 10px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+}
+
+/* Sidebar.css */
+.sidenav {
+  background-color: #ffffff;
+  width: 20%;
+  height: 100%;
+  position: fixed;
+  margin-top: 0;
+  border-right: #2449a0 1px solid;
+}
+
+.medlogo {
+  height: 50px;
+  background-color: #2449a0;
+  margin-left: 0px;
+}
+
+.medlogo img {
+  height: 50px;
+  width: 40px;
+  background-color: #1c2472;
+}
+
+.profile {
+  width: 100%;
+  height: 80px;
+  padding: 15px;
+}
+
+.profile img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.sidenav ul {
+  list-style: none;
+  padding: 10px;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
+}
+
+.sidenav li {
+  max-width: 100%;
+  padding: 15px;
+  cursor: pointer;
+}
+
+.sidenav li a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  display: flex;
+  gap: 15px;
+}
+
+.sidenav li:hover {
+  background-color: #e4edf9;
+  max-width: 100%;
+}
+
+.outlet {
+  padding-left: 25%;
+  padding-top: 8%;
+  background-color: #e4edf9;
+}
+.labformArea {
+  background-color: #ffffff;
+  width: 90%;
+  /* margin-left: 3%; */
+  padding: 20px;
+  padding-top: 40px;
+  /* margin: 40px; */
+}
+
+.labform {
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 55%;
+  height: fit-content;
+  margin-left: 3%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  border: #e2e5f5 solid 1px;
+}
+
+.labform button {
+  background-color: #1c2472;
+  border: none;
+  height: 30px;
+  width: 80px;
+  color: #ffffff;
+}
+
+.labform div {
+  display: flex;
+  flex-direction: row;
+  /* gap: 0px; */
+  width: 100%;
+}
+
+.labform label {
+  width: 40%;
+  margin-left: 10px;
+}
+
+.labform input,
+select {
+  width: 100%;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.lablist {
+  height: 500px;
+  align-items: center;
+  width: 80%;
+  padding: 20px;
+  background-color: #ffffff;
+}
+
+.labform span {
+  font-size: larger;
+  font-weight: 600;
+}
+.topSect {
+  display: flex;
+  flex-direction: row;
+  gap: 3%;
+}
+.grapharea {
+  background-color: #e4edf9;
+  height: 500px;
+  width: 35%;
+}
+
+.grapharea img {
+  height: 60%;
+  width: 90%;
+  padding: 5%;
+}
+
+.grapharea span {
+  max-height: 40px;
+  max-width: 40px;
+  background-color: red;
+  border: #1c2472 solid 2px;
+}
